--- a/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
+++ b/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
@@ -67,7 +67,7 @@ groups:
         annotations:
           message: Pod {{ $labels.namespace }}/{{ $labels.pod }} ({{ $labels.container }}) is restarting {{ printf "%.2f" $value }} times / 5 minutes.
           runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubepodcrashlooping
-        expr: rate(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[15m]) * 60 * 5 > 0
+        expr: max_over_time(kube_pod_container_status_waiting_reason{reason="CrashLoopBackOff", job="kube-state-metrics"}[5m]) >= 1
         for: 1h
         labels:
           severity: critical
@@ -195,7 +195,7 @@ groups:
         annotations:
           message: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more than one hour to complete.
           runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubejobcompletion
-        expr: kube_job_spec_completions{job="kube-state-metrics"} - kube_job_status_succeeded{job="kube-state-metrics"} > 0
+        expr: "time() - max by(namespace, job_name, cluster) (kube_job_status_start_time{job=\"kube-state-metrics\"}\n  and\nkube_job_status_active{job=\"kube-state-metrics\"} > 0) > 43200  \n"
         for: 1h
         labels:
           severity: warning
