--- a/hack/ci/testdata/seed_backup.yaml
+++ b/hack/ci/testdata/seed_backup.yaml
@@ -78,12 +78,15 @@ spec:
           cluster: Kubermatic
           datacenter: Hamburg
           datastore: ceph-vm
-          endpoint: https://vcenter.dc.k8c.io
-          root_path: /Hamburg/vm/Kubermatic-dev
+          endpoint: https://10.10.0.100
+          allow_insecure: true
+          rootPath: /Hamburg/vm/Kubermatic-ci
           templates:
-            ubuntu: ubuntu-20.04
-            centos: centos-7
-            flatcar: flatcar-stable
+            centos: kkp-centos-7
+            flatcar: kkp-flatcar-3033.2.2
+            rhel: kkp-rhel-8.6
+            ubuntu: kkp-ubuntu-20.04
+            rockylinux: kkp-rockylinux-8
     azure-westeurope:
       location: "Azure West europe"
       country: NL
